<?xml version="1.0"?>
<package>
  <name>navigation_delux_toolbox_launch</name>
  <version>0.0.1</version>
  <description>Launch Files Navigation Stack with some experimental functionalities</description>

  <maintainer email="jocamaba1989@gmail.com">Jose Mayoral</maintainer>

  <license>MIT</license>

  <author email="jocamaba1989@gmail.com">Jose Mayoral</author>

  <buildtool_depend>catkin</buildtool_depend>
  <!-- Dependencies TODO -->

</package>
